fixed gap

--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -1,5 +1,6 @@
 body{
     background-color: #FFF0E0;
+    margin: 0px;
 }
 header{
     text-align: center;
